src/main/java/semantic/abstractSintaxTree/test/failing/selfAccessInVoid.ru
/? SelfAccessInStaticMethod
start {
    Int x;
    self.x = 5;
}